# arbitrInsights

./: .env.example  .gitignore  README.md  dashboard.html  index.html  pyproject.toml
conductor/: agents.py  dispatch.py  display.py  main.py  options.py  serve.py
data/dashboard/: competitor-dive.json  conference-events.json  intel-broad.json  intel-focused.json  intel-japan.json  producthunt-hn.json  research-patents.json  top-insights.json  weekly-rollup.json
tools/: api_tools.py  scheduler_tools.py
