[project]
name = "nake-the-conductor"
version = "0.1.0"
description = "Personal AI assistant orchestrator using Claude Agent SDK"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.96.0",
    "python-dotenv",
]

[project.scripts]
conductor = "conductor.main:run"
dashboard = "conductor.serve:run"
